--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,11 @@
     display: flex;
 }
 
-.Play {
-    font-family:'Play',sans-serif;
+.Major {
+    font-family:'Major Mono Display',monospace;
 }
+
+
 .B612 {
     font-family: 'B612 Mono', monospace;
 }
@@ -36,11 +38,11 @@
     background: linear-gradient(180deg, #000000, #000,#111, #222, #333, #333);
     background-size: cover;
     transition: 0.5s;
-    grid-template-rows: 10vh 100vh 60vh 17vh;
+    grid-template-rows: 10vh 100vh 60vh 1fr;
 }
 
 .cabecera {
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     position: sticky;
     opacity: 0.88;
@@ -56,7 +58,8 @@
 
 a {
     font-size: 0.9em;
-    padding: 0.2vw;
+    margin: 1vw;
+    padding: 0.5vw;
     transition: all 0.5s ease-in-out;
 }
 
@@ -120,11 +123,11 @@ a {
 .contenedor-principal {
     justify-content: center;
     align-items: center;
-    padding: 2vh;
+    margin:4vw;
 }
 
 .portada {
-    width:50%;
+    width:60%;
     height:50%;
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 1vh;
@@ -138,7 +141,6 @@ a {
 
 .portada h1 {
     font-size: 5.2em;
-    font-weight: bold;
     text-align: center;
 }
 
@@ -165,8 +167,8 @@ a {
 .caja-texto {
     grid-template-rows: repeat(4, 1fr);
     padding: 2vh 2vw;
-    width: 50%;
-    grid-gap: 2vh;
+    width: 60vw;
+    grid-gap: 2vw;
     text-align: center;
 }
 
@@ -204,8 +206,8 @@ a {
 }
 
 .parentesis {
-    margin-top: 4vh;
-    font-size: 0.5em;
+    margin-top: 6vh;
+    font-size: 0.3em;
 }
 
 .footer {
