--- a/css/perso-hobbies.css
+++ b/css/perso-hobbies.css
@@ -42,6 +42,7 @@
     align-items: center;
     position: sticky;
     opacity: 0.88;
+    z-index:999;
     background-color: #000;
     top: 0px;
 }
