--- a/css/contactme.css
+++ b/css/contactme.css
@@ -1,3 +1,8 @@
+/*
+* CSS Responsive - Móvil + Tablet
+*/
+@import url(media-queries.css);
+
 * {
     margin:0;
     padding:0;
@@ -7,7 +12,6 @@
     border: none;
     font-style:none;
     text-decoration:none;
-    background-color:white;
 }
 
 div {
