--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -17,7 +17,7 @@
     -webkit-animation-duration: 1.2s;
     animation-iteration-count: infinite;
     -webkit-animation-iteration-count: infinite;
-    color:red;
+    color:var(--barra-color);
 }
 
 @-webkit-keyframes barraDeEscribir {
@@ -57,7 +57,7 @@
 .contenedor-principal img {
     width:100%;
     height:auto;
-    opacity:0.2;
+    opacity:var(--opacity-img);
 }
 
 .portada {
@@ -82,7 +82,7 @@
 .portada p {
     text-align: right;
     font-size:1.3em;
-    border-bottom: 1px solid #FA8072;
+    border-bottom: 1px solid var(--barra-border);
     align-self: flex-start;
     justify-self:flex-end;
 }
