--- a/css/pages/exp-prof.css
+++ b/css/pages/exp-prof.css
@@ -11,14 +11,76 @@
 .contenedor-principal {
     justify-content: center;
     align-items:center;
-    padding:5vh;
+    position:relative;
+    z-index:1;
+}
+.contenedor-principal::before {
+    content:'';
+    position:absolute;
+    z-index:-1;
+    width:100%;
+    height:100%;
+    opacity:.2;
+    background-size: cover;
+    background-origin: border-box;
+    background-image: url(../../assets/profondo.png);
+    background-repeat:no-repeat;
 }
 .portada {
-    grid-template-rows: repeat(2, 1fr) 50vh;
+    grid-template-rows: repeat(3, 1fr);
 }
 .portada h2 {
     font-size: 1.3em;
 }
 .portada h1 {
-    font-size:2.3em;
+    font-size:4em;
+}
+.portada p {
+    margin-top:1vw;
+    border-bottom: 1.5px solid var(--barra-border);
+    text-align:center;
+    display:block;
+    align-self:flex-end;
+    justify-self:right;
+    font-size:1.2em;
+}
+.barraDeEscribir {
+    animation-name: barraDeEscribir;
+    -webkit-animation-name: barraDeEscribir;
+    animation-duration: 1.2s;
+    transition: 1.2s;
+    font-size: 1.5em;
+    font-weight: bold;
+    -webkit-animation-duration: 1.2s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    color:var(--barra-color);
+}
+
+@-webkit-keyframes barraDeEscribir {
+    from {
+        opacity:0;
+    }
+
+    65% {
+        opacity:1;
+    }
+
+    to {
+        opacity:0;
+    }
+}
+
+@keyframes barraDeEscribir {
+    from {
+        opacity:0;
+    }
+
+    65% {
+        opacity:1;
+    }
+
+    to {
+        opacity:0;
+    }
 }
