--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -12,9 +12,9 @@
 .barraDeEscribir {
     animation-name: barraDeEscribir;
     -webkit-animation-name: barraDeEscribir;
-    animation-duration: 1.2s;
-    transition: 1.2s;
-    -webkit-animation-duration: 1.2s;
+    animation-duration: 1s;
+    transition: 1s;
+    -webkit-animation-duration: 1s;
     animation-iteration-count: infinite;
     -webkit-animation-iteration-count: infinite;
     color:var(--barra-color);
@@ -71,31 +71,30 @@
     position:absolute;
     height:60%;
     grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1vh;
+    grid-gap: 0.5vw;
 }
 
 .portada h2 {
     text-align: left;
     color: var(--textbox-title);
-    font-size:1.5em;
+    font-size:1.2em;
     align-self: flex-end;
 }
 
 .portada h1 {
-    font-size: 5.5em;
+    font-size: 3.2em;
     text-align: center;
 }
 
 .portada p {
     text-align: right;
-    font-size:1.3em;
     border-bottom: 1.5px solid var(--barra-border);
     align-self: flex-start;
     justify-self:flex-end;
 }
 
 .portada span {
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
@@ -115,17 +114,17 @@
 }
 
 .caja-texto h3 {
-    font-size: 1.3em;
+    font-size: 0.9em;
     color:var(--textbox-title);
 }
 
 .caja-texto p {
-    font-size: 0.9em;
+    font-size: 0.5em;
     font-weight: bold;
 }
 
 .caja-texto span {
-    margin-top: 2.5vh;
+    margin-top: 2vh;
     align-items:center;
     justify-content:center;
     transition:1s;
@@ -134,74 +133,4 @@
 .contenedor-bajo .caja-texto:hover span {
     transform: scale(1.05);
     transform-origin: center;
-}
-
-.boton-contacto {
-    font-size: 1.4em;
-    padding: 1vh;
-    border: 2px solid var(--button-border);
-    border-radius: 20%;
-}
-
-.boton-contacto:hover {
-    background-color:var(--button-bg-hover);
-    color: var(--button-c-hover);
-    border: 3px solid var(--button-hover);
-}
-
-.parentesis {
-    margin-top: 6vh;
-    font-size: 0.3em;
-}
-
-.footer {
-    justify-content: center;
-    align-items:center;
-    background-color:var(--bg-footer);
-    opacity:var(--opacity-footer);
-    padding:0.5vw;
-}
-.contenedor-footer {
-    grid-template-rows: 1fr 0.5fr;
-    align-items:center;
-    justify-content:center;
-}
-.contenedor-footer h4 {
-    font-size: 0.9em;
-    color:#000;
-}
-.contenedor-rrss {
-    justify-content:space-around;
-    padding-bottom:0.5vw;
-    align-items:center;
-    text-align:center;
-}
-.contenedor-rrss a:hover i {
-    transform: scale(1.1);
-    transform-origin:center;
-}
-.rrss {
-    font-size:2.2em;
-    transition:1.5s;
-}
-.color-lin {
-    background-color:#0077b5;
-    padding:5px;
-    background-clip:text;
-    border-radius:15%;
-    color:white;
-}
-.color-git {
-    background-color:black;
-    padding:5px;
-    background-clip:text;
-    border-radius:15%;
-    color:white;
-}
-.color-ig {
-    background: linear-gradient(180deg, #515BD5, #8134AF, #DD2A7B, #F58529, #FEDA77);
-    padding:5px;
-    background-clip: text;
-    color:white;
-    border-radius:15%;
 }
