--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@
     font-family:'Major Mono Display',monospace;
 }
 
-
 .B612 {
     font-family: 'B612 Mono', monospace;
 }
@@ -39,10 +38,34 @@
     font-family: 'Rubik Mono One', sans-serif;
 }
 
-#fondo {
+.wrapper {
+    width:100%;
     background: var(--bg-gradient);
     background-size: cover;
+    position:absolute;
     /* transition: 0.5s; */
+}
+.button-up {
+    position:fixed;
+    width: 32px;
+    text-align:center;
+    height:32px;
+    border-radius:50%;
+    padding-top:2px;
+    right: 30px;
+    bottom: 30px;
+    z-index:100;
+    display:none;
+    transition: .5s;
+    background-color: var(--bg-ch);
+    cursor: pointer;
+}
+.button-up:hover {
+    transform:scale(1.1);
+    background-color:var(--bg-clickup);
+}
+.arrow-up {
+    color: var(--header-bg);
 }
 
 .cabecera {
@@ -85,20 +108,18 @@ a {
 }
 
 .this {
-    font-size: 0.7em;
+    font-size: 0.6em;
     cursor: default;
     text-align:center;
     justify-content: center;
     align-items:center;
     color: var(--actual-page);
-    font-weight: bold;
+    line-height: bold;
 }
 
 
 .cambiar-tema {
     grid-template-rows: repeat(2,auto);
-    margin:1vw;
-    grid-gap:1vw;
     transition: all 0.5s ease-in-out;
     align-items: center;
     justify-content: center;
@@ -109,9 +130,6 @@ a {
     text-align:center;
 }
 
-button {
-    background:none;
-}
 .session-theme, .local-theme {
     grid-auto-columns: repeat(auto, 1fr);
     grid-auto-flow: column;
@@ -120,11 +138,46 @@ button {
 .theme-emoji div button {
     font-size:0.7em;
     border:none;
+    background:none;
     color:var(--header-text-color);
 }
 .theme-emoji div button:hover {
-    transform:scale(1.4);
+    transform:scale(1.15);
     transition:1s;
+}
+.contenedor-bajo {
+    justify-content: center;
+    align-items: center;
+    background-color: var(--textbox-color);
+    opacity: 0.8;
+}
+.caja-texto {
+    grid-template-rows: repeat(4, 1fr);
+    width: 60%;
+    grid-gap: 2vw;
+    text-align: center;
+}
+
+.caja-texto h3 {
+    font-size: 0.9em;
+    color:var(--textbox-title);
+}
+
+.caja-texto p {
+    font-size: 0.5em;
+    font-weight: bold;
+}
+
+.caja-texto span {
+    margin-top: 2vh;
+    align-items:center;
+    justify-content:center;
+    transition:1s;
+}
+
+.contenedor-bajo .caja-texto:hover span {
+    transform: scale(1.05);
+    transform-origin: center;
 }
 
 .boton-contacto {
