--- a/css/pages/perso-hobbies.css
+++ b/css/pages/perso-hobbies.css
@@ -6,7 +6,7 @@
 @import url(../themes.css);
 
 .wrapper {
-    grid-template-rows: 10vh 100vh 60vh 17vh;
+    grid-template-rows: 10vh 100vh repeat(3,60vh) 1fr;
 }
 .contenedor-principal {
     justify-content: center;
@@ -23,19 +23,20 @@
     opacity:.2;
     background-size: cover;
     background-origin: content-box;
-    background-image: url(../../assets/payobestia.png);
     background-repeat:no-repeat;
+    background-image: url(../../assets/payobestia.png);
 }
 .portada {
     grid-template-rows: repeat(3, 1fr);
 }
 .portada h2 {
     display:block;
-    font-size: 1.3em;
+    color:var(--textbox-title);
+    font-size: 1em;
     align-self:flex-end;
 }
 .portada h1 {
-    font-size:4.5em;
+    font-size:3.2em;
     display:block;
     text-align:center;
 }
@@ -46,7 +47,7 @@
     display:block;
     align-self:flex-end;
     justify-self:right;
-    font-size:1.2em;
+    font-size:0.7em;
 }
 .barraDeEscribir {
     animation-name: barraDeEscribir;
@@ -87,4 +88,68 @@
     to {
         opacity:0;
     }
+}
+.contenedor-perso {
+    justify-content:center;
+    align-items:center;
+    position:relative;
+    z-index:1;
+}
+.contenedor-perso::before {
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:-1;
+    opacity:.1;
+    background-color: var(--bg-cp);
+}
+.textPersonal {
+    grid-gap:1vw;
+    margin:2vw;
+    width:70%;
+    text-align:center;
+    grid-template-rows: repeat(auto-fill, 1fr);
+}
+.textPersonal h3 {
+    color:var(--textbox-title);
+    font-size:1.2em;
+    margin-bottom: 1vh;
+}
+.textPersonal p{
+    font-size:0.65em;
+}
+.contenedor-hobbies {
+    justify-content:center;
+    align-items:center;
+    position:relative;
+    z-index:1;
+}
+.contenedor-hobbies::before {
+    content:'';
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+    opacity:.3;
+    background-color:var(--bg-ch);
+}
+.textHobbies {
+    grid-template-rows: repeat(auto-fill, 1fr);
+    width:65%;
+    text-align:center;
+    margin: 2vw;
+    grid-gap: 1vw;
+}
+.textHobbies h3 {
+    color: var(--hobbies-title);
+    font-size: 1.2em;
+    margin-bottom:1vh;
+}
+.textHobbies p {
+    font-size:0.65em;
 }
