--- a/css/themes.css
+++ b/css/themes.css
@@ -89,7 +89,7 @@
     --barra-color: #39FF14;
     --barra-border:#98fb98;
     /* */
-    --textbox-title: #98fb98;
+    --textbox-title: #5eff5e;
     --button-hover: lime;
     --hobbies-title: #39FF14;
 }
