--- a/css/main.css
+++ b/css/main.css
@@ -103,8 +103,8 @@ a {
     transform: scale(1.02);
     transform-origin: center;
     color: var(--anchor-text-hover);
-    border-bottom: 0.5px solid;
-    border-color: var(--anchor-hover);
+    text-decoration: underline;
+    text-decoration-color: var(--anchor-hover);
 }
 
 .this {
